--- a/style.css
+++ b/style.css
@@ -53,8 +53,54 @@ nav {
     margin-right: 100px;
 }
 
+.wrapper {
+    margin: 0 auto;
+    max-width: 1100px;
+    width: 100%;
+}
+
+.intro {
+    margin-top: 25px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.intro-img {
+    background-image: url(https://images.pexels.com/photos/1571460/pexels-photo-1571460.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    width: 965px;
+    height: 640px;
+}
+
+.intro .intro-text {
+    position: absolute;
+    font-size: 62px;
+    right: 750px;
+    top: 220px;
+}
+
+.intro-contacts {
+    background-color: #ffcc01;
+    max-width: 590px;
+    position: absolute;
+    right: 170px;
+    top: 638px;
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 50px;
+
+}
+
+.intro-contacts i {
+    color: #fff;
+    margin-right: 5px;
+    margin-left: 20px;
+
+}
+
+
+
 @media screen and (max-width: 765px) {
-    .toogle{
+    .toogle {
         clear: both;
         display: block;
         text-align: center;
@@ -62,29 +108,34 @@ nav {
         line-height: 40px;
         width: 100%;
         color: black;
-        background: #ffcc01;
+        background: #ffcc01;w
         transition: all .1s linear;
     }
+
     .toogle:hover {
         background: #d3a900;
     }
+
     #checkbox-menu:checked + label .touch li {
         opacity: 1;
         visibility: visible;
         transition: all .7s linear;
     }
+
     #checkbox-menu:checked + label .touch {
         height: 350px;
     }
+
     .menu {
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        align-items: ;
+        align-items: center;
         height: 0;
         transition: height .3s linear;
 
     }
+
     .menu li {
         display: flex;
         align-self: center;
@@ -92,10 +143,12 @@ nav {
         opacity: 0;
         visibility: hidden;
     }
+
     .menu li a{
         width: 95%;
         text-align: center;
     }
+
     .menu li a.logo {
         font-size: 25px;
         margin-right: 0;
@@ -104,4 +157,38 @@ nav {
     .menu li a.contacts {
         margin-right: 0;
     }
+
+    .intro {
+        margin-top: 0;
+        display: block;
+        max-width: 100%;
+    }
+
+    .intro-img {
+        background-position: botom 50px right 570px;
+    }
+
+    .intro .intro-text {
+        position: relative;
+        font-size: 35px;
+        right: -10px;
+        top: 95px;
+    }
+
+    .intro .intro-contacts {
+        right: 0;
+        top: -60px;
+        padding: 20px 10px;
+        position: relative;
+    }
+
+    .intro-contacts i {
+        margin-right: 10px;
+    }
+    
+    .intro-contacts p  {
+        font-size: 13px;
+        margin-right: 0;
+    }
+    
 }
