--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Roboto Condensed', sans-serif; 
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-body, html {
+body,
+html {
     overflow-x: hidden;
 }
 
@@ -87,14 +88,12 @@ nav {
     display: flex;
     justify-content: space-between;
     padding: 30px 50px;
-
 }
 
 .intro-contacts i {
     color: #fff;
     margin-right: 5px;
     margin-left: 20px;
-
 }
 
 .stats {
@@ -155,7 +154,7 @@ nav {
 .card {
     max-width: 348px;
     background: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);    
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .card-container {
@@ -173,9 +172,8 @@ nav {
     color: #ffcc01;
 }
 
-.card-info i{
+.card-info i {
     margin-right: 8px;
-
 }
 
 .card-info span:first-child {
@@ -184,7 +182,7 @@ nav {
 
 .card:hover {
     background: #fafaf9;
-    box-shadow: 0 0 10px rgba(0,0,0,0.9);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 }
 
 .cards {
@@ -233,7 +231,6 @@ nav {
 
 .buttons-search {
     display: flex;
-
 }
 
 .steps h2 {
@@ -255,7 +252,7 @@ nav {
     width: 340px;
     height: 370px;
     background: #fff;
-    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     overflow: hidden;
 }
 
@@ -275,7 +272,6 @@ nav {
     margin-bottom: 50px;
     display: flex;
     justify-content: space-between;
-
 }
 
 .stepblock h4 {
@@ -305,7 +301,43 @@ nav {
     border-bottom: 3px solid #fff;
 }
 
+.serv-container {
+    display: flex;
+    margin-top: 70px;
+}
 
+.services img {
+    width: 100%;
+    height: auto;
+}
+
+.serf-img-container {
+    width: 58%;
+}
+
+.serv-text {
+    width: 42%;
+    margin-left: 3%;
+}
+
+.serv-text p {
+    margin-bottom: 60px;
+}
+
+.services h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.services p {
+    font-size: 13px;
+    line-height: 30px
+}
+
+.services h4 {
+    font-size: 25px;
+    margin-bottom: 25px;
+}
 
 @media screen and (max-width: 765px) {
     .toogle {
@@ -319,21 +351,17 @@ nav {
         background: #ffcc01;
         transition: all .1s linear;
     }
-
     .toogle:hover {
         background: #d3a900;
     }
-
-    #checkbox-menu:checked + label .touch li {
+    #checkbox-menu:checked+label .touch li {
         opacity: 1;
         visibility: visible;
         transition: all .7s linear;
     }
-
-    #checkbox-menu:checked + label .touch {
+    #checkbox-menu:checked+label .touch {
         height: 350px;
     }
-
     .menu {
         display: flex;
         flex-direction: column;
@@ -341,9 +369,7 @@ nav {
         align-items: center;
         height: 0;
         transition: height .3s linear;
-
     }
-
     .menu li {
         display: flex;
         align-self: center;
@@ -351,113 +377,102 @@ nav {
         opacity: 0;
         visibility: hidden;
     }
-
-    .menu li a{
+    .menu li a {
         width: 95%;
         text-align: center;
     }
-
     .menu li a.logo {
         font-size: 25px;
         margin-right: 0;
     }
-    
     .menu li a.contacts {
         margin-right: 0;
     }
-
     .intro {
         margin-top: 0;
         display: block;
         max-width: 100%;
     }
-
     .intro-img {
         background-position: botom 50px right 570px;
     }
-
     .intro .intro-text {
         position: relative;
         font-size: 35px;
         right: -10px;
         top: 95px;
     }
-
     .intro .intro-contacts {
         right: 0;
         top: -60px;
         padding: 20px 10px;
         position: relative;
     }
-
     .intro-contacts i {
         margin-right: 10px;
     }
-    
-    .intro-contacts p  {
+    .intro-contacts p {
         font-size: 13px;
         margin-right: 0;
     }
-
     .stats {
         margin-top: 0;
         flex-direction: column;
     }
-
     .stats-text {
         padding: 10px;
     }
-
     .stats-text h2 {
         font-size: 30px;
         margin-bottom: 10px;
     }
-
     .stats-text p {
         margin-top: 5px;
         font-size: 13px;
     }
-
     .square {
         height: 160px;
     }
-
     .cards {
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(6, 1fr);
         grid-gap: 10px;
         justify-items: center;
     }
-
     .apart input[type=text] {
         margin-top: 20px;
         width: 130px;
     }
-
     .buttons-search {
         flex-direction: column;
         margin-left: 4%;
     }
-
     .all {
         background: #fff;
         margin-top: 10px;
         margin-left: 0;
     }
-
     .steps-container {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-
     .stepblock {
         margin-top: 20px;
     }
-
-    .steps-text, .steps h2 {
+    .steps-text,
+    .steps h2 {
         margin-left: 5%;
         margin-bottom: 15px;
     }
-
+    .serv-container {
+        margin-top: 20px;
+        flex-direction: column;
+    }
+    .serv-img-container {
+        width: 100%;
+    }
+    .serv-text {
+        width: 95%;
+    }
 }
