--- a/style.css
+++ b/style.css
@@ -339,6 +339,72 @@ nav {
     margin-bottom: 25px;
 }
 
+.agents {
+    background: #f6f5f4;
+    padding-top: 60px;
+    margin-top: 30px;
+}
+
+.agents h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.agents p {
+    font-size: 13px;
+    line-height: 30px;
+}
+
+.agents p:nth-child(3) {
+    margin-bottom: 60px;
+}
+
+.agent-block {
+    display: flex;
+    justify-content: space-between;
+}
+
+.social i {
+    margin-right: 32px;
+    position: relative;
+    top: 7px;
+    color: #000;
+}
+
+.social i:hover {
+    color: #ffcc01;
+}
+
+.social i:last-child {
+    margin-right: 18px;
+}
+
+.agent-card {
+    min-width: 344px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.agent-card p {
+    padding-left: 20px;
+}
+
+.agent-info {
+    padding-top: 10px;
+    padding-left: 25px;
+}
+
+.agent-name {
+    color: #ffcc01;
+    padding-left: 20px;
+}
+
+.agent-cards {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 95px;
+}
+
 @media screen and (max-width: 765px) {
     .toogle {
         clear: both;
@@ -474,5 +540,13 @@ nav {
     }
     .serv-text {
         width: 95%;
+    }
+    .agent-cards {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .agent-card {
+        margin-top: 15px;
     }
 }
