--- a/style.css
+++ b/style.css
@@ -448,6 +448,95 @@ nav {
     margin-left: 130px;
 }
 
+.add-line p {
+    font-size: 13px;
+    line-height: 30px;
+    margin-left: 130px;
+}
+
+.add-line-right p {
+    margin-left: 0;
+    margin-right: 130px;
+}
+
+.add-line h3:last-of-type {
+    margin-top: 25px;
+}
+
+.show-more {
+    font-size: 18px;
+    background: #1f373d;
+    padding: 30px 70px 30px 55px;
+    display: inline-block;
+    margin-left: 130px;
+    margin-top: 60px;
+    color: #fff;
+}
+
+footer {
+    background: #1f373d;
+    color: white;
+    padding-top: 50px;
+    padding-bottom: 80px;
+}
+
+.footer-block {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-block h3 {
+    font-size: 40px;
+}
+
+.footer-search input[type=text] {
+    width: 442px;
+    height: 70px;
+    color: #919eb1;
+    padding-left: 27px;
+    font-size: 15px;
+}
+
+hr {
+    opacity: 0.3;
+    margin-top: 47px;
+    margin-bottom: 70px;
+}
+
+.footer-links {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 90px;
+}
+
+.footer-link {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-links-logo {
+    font-size: 25px;
+    margin-right: 26%;
+}
+
+.footer-link p {
+    text-transform: uppercase;
+    font-size: 13px;
+    color: #919eb1;
+    margin-bottom: 35px;
+}
+
+.footer-link a {
+    color: white;
+    text-decoration: none;
+    font-size: 13px;
+    margin-bottom: 20px;
+}
+
+.footer-link a:hover {
+    opacity: 0.5;
+}
+
 @media screen and (max-width: 765px) {
     .toogle {
         clear: both;
@@ -591,5 +680,60 @@ nav {
     }
     .agent-card {
         margin-top: 15px;
+    }
+    .add-line {
+        flex-direction: column;
+    }
+    .location {
+        font-size: 15px;
+        padding: 15px 10px 18px 11px;
+    }
+    .location-melbourne {
+        left: 100px;
+        bottom: 50px;
+    }
+    .location-australia {
+        left: 60px;
+        bottom: 50px;
+    }
+    .add-line h3 {
+        font-size: 25px;
+        margin-top: 75px;
+        margin-bottom: 40px;
+        margin-left: 5%;
+    }
+    .add-line p {
+        margin-left: 5%;
+    }
+    .add-line-right p {
+        margin-left: 5%;
+        margin-right: 0;
+    }
+    .show-more {
+        font-size: 15px;
+        padding: 20px 50px 20px 35px;
+        margin-left: 15%;
+        margin-top: 20px;
+    }
+    .footer-block {
+        flex-direction: column;
+    }
+    .footer-logo h3 {
+        font-size: 25px;
+        text-align: center;
+    }
+    .footer-search input[type=text] {
+        width: 80%;
+        height: 50px;
+        margin-top: 15px;
+    }
+    .footer-search {
+        display: flex;
+        justify-content: center;
+    }
+    .footer-links {
+        flex-wrap: wrap;
+        margin-left: 5%;
+        padding-right: 30px;
     }
 }
